--- a/cafeteria/cafecustomer/templates/dashboard/dashboard.html
+++ b/cafeteria/cafecustomer/templates/dashboard/dashboard.html
@@ -132,17 +132,17 @@ th, td {
 <br><br>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="#section1">Dashboard</a></li>
-        <li><a href="{% url 'viewtransactions' %}"> Transaction Log</a> </li>
-        
+        <br>
+        <li> Transaction Log </li>
+        <br>
         <div class="tableFixHead">
           <table>
               <tr>
-                  
                   <th>Description</th>
                   <th>Date</th>
                   <th>Time</th>
                   <th>Amount</th>
-                  <th>Transaction Type</th>
+                  <th>Transaction</th>
                 </tr>
                 
       {% for i in transaction %}
@@ -166,7 +166,7 @@ th, td {
     <div class="col-sm-9">
       <div class="well">
         <h4>Dashboard</h4>
-        <p>Some text..</p>
+        <p>Welcome {{request.user}}</p>
       </div>
       <div class="row">
         <div class="col-sm-3">
