--- a/cafeteria/user/templates/admindash/delete_customer.html
+++ b/cafeteria/user/templates/admindash/delete_customer.html
@@ -1,6 +1,34 @@
-<form method="post" action="">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <title>Document</title>
+</head>
+<style>
+  div {
+      border-radius: 25px;
+      background-color: #FFF8DC;
+      padding: 20px;
+      width: 50%;
+      margin: auto;
+      text-align: center;
+    }
+</style>
+<body>
+  <div>
+  <form method="post" action="">
     {% csrf_token %}
       <h1>Are you sure you want to delete?</h1><br>
-      <input class="btn btn-danger" type="submit" value="Yes" />
-      <a href="/list_items"><div class="btn btn-primary">Cancel</div></a>
+      <input class="btn btn-danger" type="submit" value="Yes" /><br>
+      <br>
+      <a href="{% url 'admindashboard' %}"><button type="button" class="btn btn-warning">Cancel</button></a>
  </form>
+</div>
+</body>
+</html>
+
