--- a/cafeteria/cafecustomer/templates/customerlogin/customerregister.html
+++ b/cafeteria/cafecustomer/templates/customerlogin/customerregister.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
- 
     <title>Registration Form</title>
-</head>
-<style>
-
-    .errorlist
+  </head>
+  <style>
+    .formsection {
+      margin-top: 25px;
+      margin-bottom: 25px;
+    }
+    .formsection input {
+      width: 100%;
+      padding: 12px 20px;
+      background-color: #E7F6F2;
+      border-radius: 5px;
+    }
+    .formsection select {
+      width: 100%;
+      padding: 12px 20px;
+      background-color: #E7F6F2;
+      border-radius: 5px;
+    }
+    .formsection label {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+    .formsection h2 {
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .register {
+      margin-top: 20px;
+    }
+    .regis {
+      width: 100%;
+    }
+    /* .errorlist
     {
       list-style-type: none;
       color: red;
@@ -99,51 +130,76 @@
   color:white;
   box-shadow: 12px 12px 12px #e61c66;
   text-align:center;
-}
+} */
+  </style>
+  <body>
+    <div class="container formsection">
+      <h2>Registration</h2>
+      <div class="row">
+        <form method="POST">
+          {% csrf_token %} {{ forms.username.errors }}
 
-</style>
-<body>
-  <div>
-    <form method="POST" >
-        {% csrf_token %} 
-      <label> Username </label>
-      {{forms.username}}
-        {{ forms.username.errors }}
-     
-  
-      <br><br>
-      <label> Name </label>
-      {{forms.name}}
-      <br><br>
-      <label> Password </label>
-      {{forms.password}}
-      <br><br>
-      <label> Mobile Number</label>
-      {{forms.mobile_number}}
-      <br><br>
-      <label> Email </label>
-      {{forms.email}}
-      <br><br>
-      <label> City </label>
-      {{forms.city}}
-      <br><br>
-      <label> Country </label>
-      {{forms.country}}
-      <br><br>
-      <label>Date Of Birth</label>
-      {{ forms.dob }}
-      <br><br>
-      <label> Gender </label>
-      {{forms.gender}}
-      <br><br>
-      <label> Occupation </label>
-      {{forms.occupation}}
-      <br><br>
-    <input type="submit" value="Register" />
-    <br><br>
-     If you already have an account,  <a href="{% url 'login' %}">  <button type="button"  class="btn btn-success">Sign Up</button></a> instead
-    
-</form>
-</div>
-</body>
+          <div class="col-md-6">
+            <label> Username : </label>
+            {{forms.username}}
+          </div>
+          <div class="col-md-6">
+            <label> Name :</label>
+            {{forms.name}}
+          </div>
+          <div class="col-md-6">
+            <label> Password : </label>
+            {{forms.password}}
+          </div>
+          <div class="col-md-6">
+            <label> Mobile Number :</label>
+            {{forms.mobile_number}}
+          </div>
+          <div class="col-md-6">
+            <label> Email :</label>
+            {{forms.email}}
+          </div>
+          <div class="col-md-6">
+            <label> City :</label>
+            {{forms.city}}
+          </div>
+
+          <div class="col-md-6">
+            <label> Country :</label>
+            {{forms.country}}
+          </div>
+          <div class="col-md-6">
+            <label>Date Of Birth :</label>
+            {{ forms.dob }}
+          </div>
+
+          <div class="col-md-6">
+            <label> Gender :</label>
+            {{forms.gender}}
+          </div>
+          <div class="col-md-6">
+            <label> Occupation :</label>
+            {{forms.occupation}}
+          </div>
+        </form>
+      </div>
+      <div class="register">
+        <button type="button" class="btn btn-primary regis">Register</button>
+        <div style="margin-top: 20px">
+          <p>
+            If you already have an account,
+            <a href="{% url 'login' %}">
+              <button type="button" class="btn btn-primary">Sign Up</button></a
+            >
+          </p>
+        </div>
+        <!-- <input type="submit" value="Register" />
+        If you already have an account,
+        <a href="{% url 'login' %}">
+          <button type="button" class="btn btn-primary">Sign Up</button></a
+        >
+        instead -->
+      </div>
+    </div>
+  </body>
 </html>
